--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 
       create(){
         this.props.create({startDate: this.state.startDate, endDate: this.state.endDate});
-
       }
 
       render(){
@@ -62,6 +61,21 @@
           </form>
         );
       }
+    }
+
+    const List = ({user, vacations})=>{
+      return (
+        <ul>
+          {
+            vacations.map(vac =>
+            <li key = {vac.id}>
+            {moment(vac.startDate).format("dddd, MM/DD/YY")} <br /> to <br /> {moment(vac.endDate).format('dddd, MM/DD/YY')} <br /> {moment(vac.endDate).diff( vac.startDate, 'days')} days <br />
+            <button>Remove</button>
+            </li>
+            )
+          }
+        </ul>
+      )
     }
 
     class App extends Component {
@@ -79,7 +93,8 @@
         this.setState({ user, vacations })
       }
       async create (vacations){
-        console.log(vacations);
+        const newVacation = (await axios.post(`${API}/users/${ this.state.user.id }/vacations`, vacations)).data;
+        this.setState({vacations: newVacation});
       }
       render(){
         const { user, vacations } = this.state;
@@ -88,6 +103,7 @@
           <div>
             <h1>Acme Vacation Planner for { user.fullName }</h1>
             <VacationForm create = {create}/>
+            <List user= {user} vacations = {vacations}/>
           </div>
         );
       }
